<resources>
    <string name="app_name">Moon</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm password</string>
    <string name="sign_in">Sign in</string>
    <string name="sign_up">Sign up</string>
    <string name="dont_have_account"><u>Don\'t have an account?</u></string>
    <string name="have_account"><u>Have an account?</u></string>
    <string name="forgot_password"><u>Forgot password?</u></string>
    <string name="username">Username</string>
    <string name="merge">merge</string>
    <string name="branch">Branch</string>
    <string name="title">Title</string>
    <string name="branch_name">Branch name</string>
    <string name="story_content">Content</string>
    <string name="story">Story</string>
    <string name="translate">Translate</string>
    <string name="poem">Poem</string>
    <string name="label">Label</string>
    <string name="profile_account">Profile Account</string>
    <string name="join_story">Join to Story</string>
    <string name="edit_story">Edit</string>
    <string name="merge_request_sent_success">Your Request sent</string>
    <string name="merge_request_sent_error">Your Request not sent</string>
    <string name="show_merge_requests">Show merge requests</string>
    <string name="accept_top">Accept top</string>
    <string name="accept_bottom">Accept bottom</string>
    <string name="new_text">New text</string>
    <string name="old_text">Old Text</string>
    <string name="Search">search</string>
</resources>