<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.core.widget.NestedScrollView
        android:id="@+id/nestedScrollView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingStart="@dimen/margin_large"
            android:paddingEnd="@dimen/margin_large"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:layout_width="200dp"
                android:layout_height="50dp"
                android:layout_gravity="center"
                android:layout_marginBottom="@dimen/padding_above_large"
                android:fitsSystemWindows="false"
                android:src="@drawable/moon"
                android:tint="?attr/colorDark"
                app:layout_constraintBottom_toTopOf="@+id/nestedScrollView"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/inp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/email"
                android:outlineProvider="paddedBounds"
                android:theme="@style/TextInputLayoutAppearanceLight"
                app:hintAnimationEnabled="true"
                app:hintEnabled="true"
                app:layout_constraintTop_toTopOf="parent">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/etEmail"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/text_size_large"
                    android:inputType="textEmailAddress"
                    android:textColorHint="@color/colorBlack" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/tilUserName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/username"
                android:outlineProvider="paddedBounds"
                android:theme="@style/TextInputLayoutAppearanceLight"
                app:hintAnimationEnabled="true"
                app:hintEnabled="true"
                app:layout_constraintTop_toTopOf="parent">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/etUserName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/text_size_large"
                    android:inputType="textPersonName"
                    android:textColorHint="@color/colorBlack" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/password"
                android:theme="@style/TextInputLayoutAppearanceLight"
                app:hintAnimationEnabled="true"
                app:hintEnabled="true"
                app:layout_constraintTop_toBottomOf="@+id/inp"
                app:passwordToggleEnabled="true">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/etPassWord"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPassword"
                    android:textSize="@dimen/text_size_large"
                    android:textColorHint="@color/colorBlack" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/tilConfirmPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/margin_normal"
                android:hint="@string/confirm_password"
                android:theme="@style/TextInputLayoutAppearanceLight"
                app:hintAnimationEnabled="true"
                app:hintEnabled="true"
                app:layout_constraintTop_toBottomOf="@+id/inp"
                app:passwordToggleEnabled="true">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/etConfirmPassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPassword"
                    android:textSize="@dimen/text_size_large"
                    android:textColorHint="@color/colorBlack" />
            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:id="@+id/tvSignIn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="@dimen/margin_large"
                android:layout_marginBottom="@dimen/margin_normal"
                android:text="@string/have_account"
                android:textColor="?attr/colorDark"
                android:textStyle="bold" />

            <Button
                android:id="@+id/btnSignUp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/margin_normal"
                android:background="@drawable/bg_login_button"
                android:enabled="false"
                android:fitsSystemWindows="true"
                android:stateListAnimator="@xml/animate_is_enabled_button"
                android:text="@string/sign_up"
                android:textColor="@color/colorSoftWhite"
                android:visibility="visible" />
        </LinearLayout>
    </androidx.core.widget.NestedScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>